--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "4.4.1",
     "jquery": "^3.5.1",
+    "npm-check": "^5.9.2",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
